Created Featured products + latest products + styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <title>Suits | E-Commerce Web Store</title>
 </head>
 <body>
@@ -38,6 +39,177 @@
                 <div class="col-2">
                     <img src="images/burgondee suit.jpeg" alt="Burgondee Suit">
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Featured Categories-->
+    <div class="categories">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-3">
+                    <img src="images/category1.jpeg" alt="Category 1 image" height="400px">
+                </div>
+                <div class="col-3">
+                    <img src="images/category2.jpeg" alt="Category 2 image" height="400px">
+                </div>
+                <div class="col-3">
+                    <img src="images/category3.jpeg" alt="Category 3 image" height="400px">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Featured Products-->
+    <div class="small-container">
+        <h2 class="title">Featured Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/suit jacket.png" alt="Suit Jacket">
+                <h4>Navy Suit Jacket</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <p>$50.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/suit pants.jpeg" alt="Suit Pants">
+                <h4>Navy Suit Pants</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$30.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/suit dress shirt.jpeg" alt="Suit Dress Shirt">
+                <h4>White Dress Shirt</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$25.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/3 piece suit.jpeg" alt="3 peice suit">
+                <h4>3 Piece Suit</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p>$150.00</p>
+            </div>
+        </div>
+
+        <h2 class="title">Latest Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="images/black suit.jpeg" alt="Black Suit">
+                <h4>Black Suit</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <p>$149.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/navy suit.jpeg" alt="Navy Suit">
+                <h4>Navy Suit</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$149.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/gray suit.jpeg" alt="Gray Suit">
+                <h4>Light Gray Suit</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$119.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/red wine suit.jpeg" alt="Red Wine Suit">
+                <h4>3 Piece Suit</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p>$149.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/suit product 5.jpeg" alt="Gray Suit Old Style">
+                <h4>Gray Checkered Suit</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$129.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/suit product 6.jpeg" alt="Black Dress Shirt">
+                <h4>Black Dress Shirt</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$19.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/suit product 7.jpeg" alt="Gray Dress Pants">
+                <h4>Gray Dress Pants</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$25.00</p>
+            </div>
+            <div class="col-4">
+                <img src="images/suit product 8.jpeg" alt="Brown 3 Piece Suit">
+                <h4>Brown 3 Piece Suit</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+                <p>$99.00</p>
             </div>
         </div>
     </div>
