Featured product created + Testimonials + layout

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
                 <p>$19.00</p>
@@ -213,6 +214,70 @@
             </div>
         </div>
     </div>
+
+    <!--Offer-->
+    <div class="offer">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-2">
+                    <img src="images/featured suit.jpeg" class="offer-img" alt="Featured Suit Product">
+                </div>
+                <div class="col-2">
+                    <p>Exclusively Available on Suits</p>
+                    <h1>Navy Star Pattern Suit - Slim Fit</h1>
+                    <small>In the same way that a quality workout trims away the excess fat, a quality men’s slim-fit suit trims away the excess fabrics. This type of suit for men gets you a stylish, form-fitting style suit that’s narrow at the chest and waist, but not to the point of constricting blood flow. While slim fit suits and athletic builds seem like an obvious pairing, the truth is that many different male body types can pull off the slim fit look.</small>
+                    <br><a href="" class="btn">Buy Now &#x279F;</a>
+                </div>
+            </div>
+        </div>
+    </div>
     
+
+    <!--Testimonial-->
+    <div class="testimonial">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-3">
+                    <i class="fas fa-quote-right"></i>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <img src="images/user1.jpeg" alt="User 1 Picture">
+                    <h3>John Wick</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fas fa-quote-right"></i>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <img src="images/user2.jpeg" alt="User 2 Picture">
+                    <h3>James Bond</h3>
+                </div>
+                <div class="col-3">
+                    <i class="fas fa-quote-right"></i>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <img src="images/user3.jpeg" alt="User 3 Picture">
+                    <h3>Diljit Dosanjh</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
