Added brands logo + footer + hamburger menu

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     </ul>
                 </nav>
                 <img src="images/cart.png" alt="Cart" width="30rem" height="30rem">
+                <img src="images/menu.png" class="menu-icon" alt="Hamburger Menu">
             </div>
             <div class="row">
                 <div class="col-2">
@@ -277,6 +278,70 @@
                     <h3>Diljit Dosanjh</h3>
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <!--Brands-->
+    <div class="brands">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-5">
+                    <img src="images/brand1.png" alt="Armani Logo">
+                </div>
+                <div class="col-5">
+                    <img src="images/brand2.png" alt="Hugo Boss Logo">
+                </div>
+                <div class="col-5">
+                    <img src="images/brand3.png" alt="Ted Baker Logo">
+                </div>
+                <div class="col-5">
+                    <img src="images/brand4.png" alt="Burberry Logo">
+                </div>
+                <div class="col-5">
+                    <img src="images/brand5.png" alt="Versace Logo">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Footer-->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Download Our App</h3>
+                    <p>Download our App for Android and IOS mobile phone.</p>
+                    <div class="app-logo">
+                        <img src="images/playstore-logo.png" alt="Playstore Logo">
+                        <img src="images/appstore-logo.png" alt="Apple Store Logo">
+                    </div>
+                </div>
+                <div class="footer-col-2">
+                    <img src="images/logo.jpeg" alt="Logo">
+                    <p>Our purpose is to unlock the power of imagination to push boundaries and open new possibilities for our people, our customers and our communities.</p>
+                </div>
+                <div class="footer-col-3">
+                    <h3>Useful Links</h3>
+                    <ul>
+                        <li>Coupons</li>
+                        <li>Blog Post</li>
+                        <li>Return Policy</li>
+                        <li>Join Affiliate</li>
+                    </ul>
+                </div>
+                <div class="footer-col-4">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>YouTube</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <p class="copyright">&#169; 2021 - Ramandeep Singh</p>
         </div>
     </div>
 </body>
