Finished login and registration page + bug fix in js file + links added for navbars

--- a/products.html
+++ b/products.html
@@ -19,18 +19,18 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="images/logo.jpeg" alt="Website logo" width="85rem">
+                    <a href="index.html"><img src="images/logo.jpeg" alt="Website logo" width="85rem"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Account</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <img src="images/cart.png" alt="Cart" width="30rem" height="30rem">
+                <a href="cart.html"><img src="images/cart.png" alt="Cart" width="30rem" height="30rem"></a>
                 <img src="images/menu.png" class="menu-icon" alt="Hamburger Menu" onclick="menutoggle()">
             </div>
         </div>
@@ -51,8 +51,8 @@
 
         <div class="row">
             <div class="col-4">
-                <img src="images/suit jacket.png" alt="Suit Jacket">
-                <h4>Navy Suit Jacket</h4>
+                <a href="product-detail.html"><img src="images/suit jacket.png" alt="Suit Jacket"></a>
+                <a href="product-detail.html"><h4>Navy Suit Jacket</h4></a>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
