--- a/account.html
+++ b/account.html
@@ -19,18 +19,18 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.jpeg" alt="Website logo" width="85rem">
+                <a href="index.html"><img src="images/logo.jpeg" alt="Website logo" width="85rem"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="images/cart.png" alt="Cart" width="30rem" height="30rem">
+            <a href="cart.html"><img src="images/cart.png" alt="Cart" width="30rem" height="30rem"></a>
             <img src="images/menu.png" class="menu-icon" alt="Hamburger Menu" onclick="menutoggle()">
         </div>
     </div>
@@ -46,19 +46,19 @@
                 <div class="col-2">
                     <div class="form-container">
                         <div class="form-btn">
-                            <span>Login</span>
-                            <span>Register</span>
-                            <hr id="Indicator">
+                            <span onclick="login()">Login</span>
+                            <span onclick="register()">Register</span>
+                            <hr id="indicator-bar">
                         </div>
 
-                        <form id="LoginForm">
+                        <form id="login-form">
                             <input type="text" placeholder="Username">
                             <input type="password" placeholder="Password">
                             <button type="submit" class="btn">Login</button>
                             <a href="#">Forgot password</a>
                         </form>
 
-                        <form id="RegForm">
+                        <form id="register-form">
                             <input type="text" placeholder="Username">
                             <input type="email" placeholder="Email">
                             <input type="password" placeholder="Password">
@@ -115,5 +115,23 @@
 
 
     <script src="js/script.js"></script>
+    <script>
+        //Account page toggle for Form
+        var loginForm = document.getElementById("login-form");
+        var regForm = document.getElementById("register-form");
+        var indicator = document.getElementById("indicator-bar");
+
+        function register(){
+            regForm.style.transform = "translateX(0px)";
+            loginForm.style.transform = "translateX(0px)";
+            indicator.style.transform = "translateX(100px)";
+        }
+
+        function login(){
+            regForm.style.transform = "translateX(300px)";
+            loginForm.style.transform = "translateX(300px)";
+            indicator.style.transform = "translateX(0px)";
+        }
+    </script>
 </body>
 </html>
