--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="icon" href="images/logo.jpeg">
     <title>Suits | E-Commerce Web Store</title>
 </head>
 <body>
@@ -18,18 +19,18 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="images/logo.jpeg" alt="Website logo" width="85rem">
+                    <a href="index.html"><img src="images/logo.jpeg" alt="Website logo" width="85rem"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Account</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="products.html">Products</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <img src="images/cart.png" alt="Cart" width="30rem" height="30rem">
+                <a href="cart.html"><img src="images/cart.png" alt="Cart" width="30rem" height="30rem"></a>
                 <img src="images/menu.png" class="menu-icon" alt="Hamburger Menu" onclick="menutoggle()">
             </div>
             <div class="row">
@@ -346,17 +347,31 @@
         </div>
     </div>
 
-<script src="js/script.js"></script>
+
 
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="/__/firebase/8.7.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
 
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
+    <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+        apiKey: "AIzaSyCiqqGv3SS_JdXHleQDsOUenopj-Ov4IEQ",
+        authDomain: "e-commerce-227a5.firebaseapp.com",
+        projectId: "e-commerce-227a5",
+        storageBucket: "e-commerce-227a5.appspot.com",
+        messagingSenderId: "1014743589573",
+        appId: "1:1014743589573:web:7dad969ad28625c38246ac",
+        measurementId: "G-ERC4D3023G"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+    </script>
 </body>
 </html>
