--- a/index.html
+++ b/index.html
@@ -348,16 +348,30 @@
     </div>
 
 
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 
-   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/8.8.0/firebase-app.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="/__/firebase/8.8.0/firebase-analytics.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-analytics.js"></script>
 
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyCiqqGv3SS_JdXHleQDsOUenopj-Ov4IEQ",
+            authDomain: "e-commerce-227a5.firebaseapp.com",
+            projectId: "e-commerce-227a5",
+            storageBucket: "e-commerce-227a5.appspot.com",
+            messagingSenderId: "1014743589573",
+            appId: "1:1014743589573:web:63a0d3f8bf61e77e8246ac",
+            measurementId: "G-3PYLDS7JPZ"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
 </body>
 </html>
